[package]
name = "notion_chinese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
glob = "0.3.1"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
